@@ -66,7 +66,7 @@ ChromDepthFilterUtil(
     {
         std::ostringstream oss;
         oss << "ERROR: " << chromDepth.size() << " chromosomes in chrom depth file, but "
-                << callableChromCount << " found in the bam header." << "\n";
+            << callableChromCount << " found in the bam header." << "\n";
         BOOST_THROW_EXCEPTION(LogicException(oss.str()));
     }
 }
